--- a/gallery/index.html
+++ b/gallery/index.html
@@ -5,6 +5,7 @@
     </title>
     <link href="/vendor/Semantic-UI/dist/semantic.min.css" rel="stylesheet">
     <link href="/dist/styles.css" rel="stylesheet">
+    <link href="/dist/content.css" rel="stylesheet">
   </head>
   <body>
     <div id="fb-root"></div>
@@ -20,15 +21,17 @@
         </nav>
         <div class="fb-like" data-href="https://www.facebook.com/Langenium/" data-layout="button_count" data-action="like" data-size="small" data-show-faces="true" data-share="false"></div>
       </header>
-      <div class="row">
-        <h2>Gallery
-          <ul class="gallery">
-            <li><a href="/gallery/concept-art.html">
-                <h3>Concept Art</h3><img src="/universe/art/production/covers/thumb_Langenium - Lux Atlas_World Eater.png"></a></li>
-            <li><a href="/gallery/posters.html">
-                <h3>Posters</h3><img src="/universe/art/production/posters/thumb_Feature Poster-01.png"></a></li>
-          </ul>
-        </h2>
+      <div id="content">
+        <div class="row">
+          <h2>Gallery
+            <ul class="gallery">
+              <li><a href="/gallery/concept-art.html">
+                  <h3>Concept Art</h3><img src="/universe/art/production/covers/thumb_Langenium - Lux Atlas_World Eater.png"></a></li>
+              <li><a href="/gallery/posters.html">
+                  <h3>Posters</h3><img src="/universe/art/production/posters/thumb_Feature Poster-01.png"></a></li>
+            </ul>
+          </h2>
+        </div>
       </div>
     </div>
   </body>
