--- a/games/character_test.html
+++ b/games/character_test.html
@@ -5,6 +5,7 @@
     </title>
     <link href="/vendor/Semantic-UI/dist/semantic.min.css" rel="stylesheet">
     <link href="/dist/styles.css" rel="stylesheet">
+    <link href="/dist/content.css" rel="stylesheet">
   </head>
   <body>
     <div id="fb-root"></div>
@@ -20,10 +21,12 @@
         </nav>
         <div class="fb-like" data-href="https://www.facebook.com/Langenium/" data-layout="button_count" data-action="like" data-size="small" data-show-faces="true" data-share="false"></div>
       </header>
-      <div class="row">
-        <h3>Character Test</h3>
-        <p>Epoch Exordium's protagonist is Jack. This is a Live2D and Three.JS integration test to demonstrate the use of multiple Live2D canvases to simulate multiple sides of the 2D character in 3D space.</p>
-        <div class="character_test"></div>
+      <div id="content">
+        <div class="row">
+          <h3>Character Test</h3>
+          <p>Epoch Exordium's protagonist is Jack. This is a Live2D and Three.JS integration test to demonstrate the use of multiple Live2D canvases to simulate multiple sides of the 2D character in 3D space.</p>
+          <div class="character_test"></div>
+        </div>
       </div>
     </div>
   </body>
