--- a/games/index.html
+++ b/games/index.html
@@ -5,6 +5,7 @@
     </title>
     <link href="/vendor/Semantic-UI/dist/semantic.min.css" rel="stylesheet">
     <link href="/dist/styles.css" rel="stylesheet">
+    <link href="/dist/content.css" rel="stylesheet">
   </head>
   <body>
     <div id="fb-root"></div>
@@ -20,23 +21,25 @@
         </nav>
         <div class="fb-like" data-href="https://www.facebook.com/Langenium/" data-layout="button_count" data-action="like" data-size="small" data-show-faces="true" data-share="false"></div>
       </header>
-      <div class="row">
-        <h2>Games</h2>
-        <p>Langenium is a project that encompasses a game engine and it's own world of games and media. Here are the games currently in development, as well as some demo's.   </p>
-        <h3>Langenium Epoch Exordium</h3>
-        <p>A single player experience with an emphasis on story and philosophy. The game tells the story of Jack, a lone operator of the Helios station. His job is to ensure the precious Exordium mineral is processed and sent to Earth to be used as an energy source. The space station AI has other plans.</p>
-        <ul>
-          <li><a href="/games/character_test.html">Character test</a></li>
-          <li><a href="/games/sound.html">Sound (Music + SFX)</a></li>
-        </ul><img src="/universe/new/thumb_exordium-poster-01.png">
-        <h3>Langenium MMO</h3>
-        <p>The featured game driving the rest of the project. Langenium was originally envisaged as an online airship combat game with RPG exploration elements, but developing it creatively and technically over the years led to concessions in what I can reasonably build within my lifetime so the other games and experiences are being developed in order to create the necessary assets and codebase for the MMO.</p>
-        <h4>Premise</h4>
-        <p>The Earth is destroyed in the year 2099 by a solar flare. A wormhole in the sky allows some of humanity to survive on a new planet covered in Ocean. The new planet makes up for its lack of land by being rich in the mineral Langenium, named after the German scientist Dr. Bruno Lange who was a pioneer in making solar energy viable. The mineral is produced in the oceans of the new planet and can be used to collect and store solar energy. </p>
-        <p>200 years later, in the year 2299, the human race is thriving on the new world but conflicts have escalated to the point of war. The tensions between the three factions of Los Zaar, The Union and the Kingdom of Winthrom are causing minor conflicts across the world. Meanwhile, mysterious alien ships are beginning to scout the planet and the humans seem to preoccupied to notice the bigger universe around their new world.</p>
-        <ul>
-          <li><a href="/games/ocean_scene.html">Ocean scene</a></li>
-        </ul><img src="/universe/art/production/posters/thumb_MMO Poster-01.png">
+      <div id="content">
+        <div class="row">
+          <h2>Games</h2>
+          <p>Langenium is a project that encompasses a game engine and it's own world of games and media. Here are the games currently in development, as well as some demo's.   </p>
+          <h3>Langenium Epoch Exordium</h3>
+          <p>A single player experience with an emphasis on story and philosophy. The game tells the story of Jack, a lone operator of the Helios station. His job is to ensure the precious Exordium mineral is processed and sent to Earth to be used as an energy source. The space station AI has other plans.</p>
+          <ul>
+            <li><a href="/games/character_test.html">Character test</a></li>
+            <li><a href="/games/sound.html">Sound (Music + SFX)</a></li>
+          </ul><img src="/universe/new/thumb_exordium-poster-01.png">
+          <h3>Langenium MMO</h3>
+          <p>The featured game driving the rest of the project. Langenium was originally envisaged as an online airship combat game with RPG exploration elements, but developing it creatively and technically over the years led to concessions in what I can reasonably build within my lifetime so the other games and experiences are being developed in order to create the necessary assets and codebase for the MMO.</p>
+          <h4>Premise</h4>
+          <p>The Earth is destroyed in the year 2099 by a solar flare. A wormhole in the sky allows some of humanity to survive on a new planet covered in Ocean. The new planet makes up for its lack of land by being rich in the mineral Langenium, named after the German scientist Dr. Bruno Lange who was a pioneer in making solar energy viable. The mineral is produced in the oceans of the new planet and can be used to collect and store solar energy. </p>
+          <p>200 years later, in the year 2299, the human race is thriving on the new world but conflicts have escalated to the point of war. The tensions between the three factions of Los Zaar, The Union and the Kingdom of Winthrom are causing minor conflicts across the world. Meanwhile, mysterious alien ships are beginning to scout the planet and the humans seem to preoccupied to notice the bigger universe around their new world.</p>
+          <ul>
+            <li><a href="/games/ocean_scene.html">Ocean scene</a></li>
+          </ul><img src="/universe/art/production/posters/thumb_MMO Poster-01.png">
+        </div>
       </div>
     </div>
   </body>
