--- a/games/ocean_scene.html
+++ b/games/ocean_scene.html
@@ -5,6 +5,7 @@
     </title>
     <link href="/vendor/Semantic-UI/dist/semantic.min.css" rel="stylesheet">
     <link href="/dist/styles.css" rel="stylesheet">
+    <link href="/dist/content.css" rel="stylesheet">
   </head>
   <body>
     <div id="fb-root"></div>
@@ -20,13 +21,15 @@
         </nav>
         <div class="fb-like" data-href="https://www.facebook.com/Langenium/" data-layout="button_count" data-action="like" data-size="small" data-show-faces="true" data-share="false"></div>
       </header>
-      <div class="row">
-        <h3>Ocean Scene</h3>
-        <p>The planet Ibidan is covered entirely in ocean, with a few scattered islands and geographical features.</p>
-        <p>TODO: Reflections</p><span id="waterSize"></span>
-        <p>webgl gpgpu water</p><span id="options"> </span>
-        <p>Water size</p>
-        <div class="ocean_scene"></div>
+      <div id="content">
+        <div class="row">
+          <h3>Ocean Scene</h3>
+          <p>The planet Ibidan is covered entirely in ocean, with a few scattered islands and geographical features.</p>
+          <p>TODO: Reflections</p><span id="waterSize"></span>
+          <p>webgl gpgpu water</p><span id="options"> </span>
+          <p>Water size</p>
+          <div class="ocean_scene"></div>
+        </div>
       </div>
     </div>
   </body>
