--- a/games/sound.html
+++ b/games/sound.html
@@ -5,6 +5,7 @@
     </title>
     <link href="/vendor/Semantic-UI/dist/semantic.min.css" rel="stylesheet">
     <link href="/dist/styles.css" rel="stylesheet">
+    <link href="/dist/content.css" rel="stylesheet">
   </head>
   <body>
     <div id="fb-root"></div>
@@ -20,13 +21,15 @@
         </nav>
         <div class="fb-like" data-href="https://www.facebook.com/Langenium/" data-layout="button_count" data-action="like" data-size="small" data-show-faces="true" data-share="false"></div>
       </header>
-      <div class="row">
-        <h3>Sound (Music + SFX)</h3>
-        <p>These tests are used to evaluate various frameworks and techniques for producing sound and music in the browser (and eventually in the game).</p>
-        <div class="sound">
-          <h4>First attempt</h4>
-          <p> </p>
-          <div class="ui labeled icon button"> <i class="play icon"></i>Play</div>
+      <div id="content">
+        <div class="row">
+          <h3>Sound (Music + SFX)</h3>
+          <p>These tests are used to evaluate various frameworks and techniques for producing sound and music in the browser (and eventually in the game).</p>
+          <div class="sound">
+            <h4>First attempt</h4>
+            <p> </p>
+            <div class="ui labeled icon button"> <i class="play icon"></i>Play</div>
+          </div>
         </div>
       </div>
     </div>
