--- a/wiki/2299.html
+++ b/wiki/2299.html
@@ -5,6 +5,7 @@
     </title>
     <link href="/vendor/Semantic-UI/dist/semantic.min.css" rel="stylesheet">
     <link href="/dist/styles.css" rel="stylesheet">
+    <link href="/dist/content.css" rel="stylesheet">
   </head>
   <body>
     <div id="fb-root"></div>
@@ -20,8 +21,10 @@
         </nav>
         <div class="fb-like" data-href="https://www.facebook.com/Langenium/" data-layout="button_count" data-action="like" data-size="small" data-show-faces="true" data-share="false"></div>
       </header>
-      <div class="row">
-        <h2>2299</h2><p>The year that <a href="/wiki/mmo.html">the MMO</a> is set in.</p>
+      <div id="content">
+        <div class="row">
+          <h2>2299</h2><p>The year that <a href="/wiki/mmo.html">the MMO</a> is set in.</p>
+        </div>
       </div>
     </div>
   </body>
