--- a/wiki/airship-academy.html
+++ b/wiki/airship-academy.html
@@ -5,6 +5,7 @@
     </title>
     <link href="/vendor/Semantic-UI/dist/semantic.min.css" rel="stylesheet">
     <link href="/dist/styles.css" rel="stylesheet">
+    <link href="/dist/content.css" rel="stylesheet">
   </head>
   <body>
     <div id="fb-root"></div>
@@ -20,13 +21,14 @@
         </nav>
         <div class="fb-like" data-href="https://www.facebook.com/Langenium/" data-layout="button_count" data-action="like" data-size="small" data-show-faces="true" data-share="false"></div>
       </header>
-      <div class="row">
-        <h2>Airship Academy</h2><h2>About Airship Academy</h2>
+      <div id="content">
+        <div class="row">
+          <h2>Airship Academy</h2><h2>About Airship Academy</h2>
 
 <h3>Purpose</h3>
 
 <p>A single player game designed to build up the cinematic and world building capabilities of the game engine. </p>
-        <h3>Story Outline</h3><p>In 1931 a German engineer, Dr Bruno Lange, developed a photo cell using silver selenide in place of copper oxide. In 2043, a deep space radar telescope discovers a new element in the accretion disc of a black hole - langenium. Through studying it&#39;s activity, scientists believed that it could perfectly convert surrounding light into usable electric energy. With no hope of retrieving even a sample, humanity searched for other avenues.</p>
+          <h3>Story Outline</h3><p>In 1931 a German engineer, Dr Bruno Lange, developed a photo cell using silver selenide in place of copper oxide. In 2043, a deep space radar telescope discovers a new element in the accretion disc of a black hole - langenium. Through studying it&#39;s activity, scientists believed that it could perfectly convert surrounding light into usable electric energy. With no hope of retrieving even a sample, humanity searched for other avenues.</p>
 
 <p>in 2099, the human race is growing desperate for a new source of energy. An AI called WERP (Web Energy Research Protocol) is created in order to research and develop a new form of power generation and deployed into the world wide web. It is hoped that it will be able to come up with a solution using the sum of human knowledge.</p>
 
@@ -69,6 +71,7 @@
 <p>The world never recovered from the state of cold war. As an immortal AI advising the Union parliament, May sought to bring peace to the world however the revelations about WERP, Tor and Francis only lead to a further state of distrust between Al-Alazaar and Winthrom. The Union now plays the role of peacekeeper, using their vast technological superiority and trade agreements as a bargaining chip to prevent violence from escalating.</p>
 
 <p>Aliens scouts have also begun attacking remote human outposts and it seems likely that they are systematically learning about humans before proceeding with a formulated plan to attack. No one is able to agree on how to handle the aliens.</p>
+        </div>
       </div>
     </div>
   </body>
