--- a/wiki/atlantis-v-olympus.html
+++ b/wiki/atlantis-v-olympus.html
@@ -5,6 +5,7 @@
     </title>
     <link href="/vendor/Semantic-UI/dist/semantic.min.css" rel="stylesheet">
     <link href="/dist/styles.css" rel="stylesheet">
+    <link href="/dist/content.css" rel="stylesheet">
   </head>
   <body>
     <div id="fb-root"></div>
@@ -20,8 +21,9 @@
         </nav>
         <div class="fb-like" data-href="https://www.facebook.com/Langenium/" data-layout="button_count" data-action="like" data-size="small" data-show-faces="true" data-share="false"></div>
       </header>
-      <div class="row">
-        <h2>Atlantis V Olympus</h2><p>The story of a primordial discworld populated by gods.</p>
+      <div id="content">
+        <div class="row">
+          <h2>Atlantis V Olympus</h2><p>The story of a primordial discworld populated by gods.</p>
 
 <h3>Zeus</h3>
 
@@ -40,6 +42,7 @@
 <h3>Yedin</h3>
 
 <p>A truly neutral avatar of the realm, Yedin tries to avoid involving himself in the conflicts of others. This ultimately leads to his death, which curses all inhabitants of heaven with permanent death.</p>
+        </div>
       </div>
     </div>
   </body>
