--- a/wiki/characters--werp.html
+++ b/wiki/characters--werp.html
@@ -5,6 +5,7 @@
     </title>
     <link href="/vendor/Semantic-UI/dist/semantic.min.css" rel="stylesheet">
     <link href="/dist/styles.css" rel="stylesheet">
+    <link href="/dist/content.css" rel="stylesheet">
   </head>
   <body>
     <div id="fb-root"></div>
@@ -20,7 +21,8 @@
         </nav>
         <div class="fb-like" data-href="https://www.facebook.com/Langenium/" data-layout="button_count" data-action="like" data-size="small" data-show-faces="true" data-share="false"></div>
       </header>
-      <div class="row"><h2>WERP (Web Energy Research Project)</h2>
+      <div id="content">
+        <div class="row"><h2>WERP (Web Energy Research Project)</h2>
 
 <p>Named WERP, or the Web Energy Research Project, as it was meant to learn and develop solutions based on information in the world wide web.</p>
 
@@ -58,6 +60,7 @@
 
 <p>&quot;If you really pay attention, the universe is all relative. Nothing is here or there, we&#39;re always moving, falling through space and time. Your position slows it down, but the real speed of the universe is the speed of light.&quot;
 &quot;You have a very single threaded way of looking at things.&quot;</p>
+        </div>
       </div>
     </div>
   </body>
