--- a/wiki/drak.html
+++ b/wiki/drak.html
@@ -5,6 +5,7 @@
     </title>
     <link href="/vendor/Semantic-UI/dist/semantic.min.css" rel="stylesheet">
     <link href="/dist/styles.css" rel="stylesheet">
+    <link href="/dist/content.css" rel="stylesheet">
   </head>
   <body>
     <div id="fb-root"></div>
@@ -20,9 +21,11 @@
         </nav>
         <div class="fb-like" data-href="https://www.facebook.com/Langenium/" data-layout="button_count" data-action="like" data-size="small" data-show-faces="true" data-share="false"></div>
       </header>
-      <div class="row"><p>The Drak are as rare as they are famous, millenia can go by without a sighting - leading many to believe that they are a myth.</p>
+      <div id="content">
+        <div class="row"><p>The Drak are as rare as they are famous, millenia can go by without a sighting - leading many to believe that they are a myth.</p>
 
 <p>Drak can freely travel across all dimensions which gives them the ability to manifest anything - given the right specifications. The Drak enjoy building things for others, giving them a purpose.</p>
+        </div>
       </div>
     </div>
   </body>
