--- a/wiki/elx.html
+++ b/wiki/elx.html
@@ -5,6 +5,7 @@
     </title>
     <link href="/vendor/Semantic-UI/dist/semantic.min.css" rel="stylesheet">
     <link href="/dist/styles.css" rel="stylesheet">
+    <link href="/dist/content.css" rel="stylesheet">
   </head>
   <body>
     <div id="fb-root"></div>
@@ -20,11 +21,13 @@
         </nav>
         <div class="fb-like" data-href="https://www.facebook.com/Langenium/" data-layout="button_count" data-action="like" data-size="small" data-show-faces="true" data-share="false"></div>
       </header>
-      <div class="row"><h3>Plantae Animalia Hybrid</h3>
+      <div id="content">
+        <div class="row"><h3>Plantae Animalia Hybrid</h3>
 
 <p>The first intelligent race in the universe, the Elx had a keen understanding of truthbut lacked the wisdom for wielding it. This led to a number of missteps including the poisoning of the Krahm homeworld’s sun.</p>
 
 <p>It is said that the Elx were wiped out by the Krahm, but no one has ever found evidenceof their decline. This is made especially problamtic due to their use of psychically controlled trees for most technology.</p>
+        </div>
       </div>
     </div>
   </body>
