--- a/wiki/end-of-love.html
+++ b/wiki/end-of-love.html
@@ -5,6 +5,7 @@
     </title>
     <link href="/vendor/Semantic-UI/dist/semantic.min.css" rel="stylesheet">
     <link href="/dist/styles.css" rel="stylesheet">
+    <link href="/dist/content.css" rel="stylesheet">
   </head>
   <body>
     <div id="fb-root"></div>
@@ -20,8 +21,9 @@
         </nav>
         <div class="fb-like" data-href="https://www.facebook.com/Langenium/" data-layout="button_count" data-action="like" data-size="small" data-show-faces="true" data-share="false"></div>
       </header>
-      <div class="row">
-        <h2>End of Love</h2><p>This is a metaphorical story that takes place deep within a character&#39;s subscious. </p>
+      <div id="content">
+        <div class="row">
+          <h2>End of Love</h2><p>This is a metaphorical story that takes place deep within a character&#39;s subscious. </p>
 
 <h4>Main re-telling</h4>
 
@@ -30,6 +32,7 @@
 <h4>End game plans</h4>
 
 <p>Upon discovering that the universe is actually a paradox due to its own existence resting on the consciousness of Yed, Nova travels to the future to rescue him, essentially correcting the mistake made by the lover.</p>
+        </div>
       </div>
     </div>
   </body>
