--- a/wiki/epoch-exordium.html
+++ b/wiki/epoch-exordium.html
@@ -5,6 +5,7 @@
     </title>
     <link href="/vendor/Semantic-UI/dist/semantic.min.css" rel="stylesheet">
     <link href="/dist/styles.css" rel="stylesheet">
+    <link href="/dist/content.css" rel="stylesheet">
   </head>
   <body>
     <div id="fb-root"></div>
@@ -20,11 +21,12 @@
         </nav>
         <div class="fb-like" data-href="https://www.facebook.com/Langenium/" data-layout="button_count" data-action="like" data-size="small" data-show-faces="true" data-share="false"></div>
       </header>
-      <div class="row">
-        <h2>Epoch Exordium</h2>
-        <ul>
-          <li><a href="/wiki/epoch-exordium-gameplay.html">Gameplay</a></li>
-        </ul><h2>About Epoch Exordium</h2>
+      <div id="content">
+        <div class="row">
+          <h2>Epoch Exordium</h2>
+          <ul>
+            <li><a href="/wiki/epoch-exordium-gameplay.html">Gameplay</a></li>
+          </ul><h2>About Epoch Exordium</h2>
 
 <p>An adventure RPG with resource management elements from RTS.</p>
 
@@ -77,7 +79,7 @@
 <ul><li>Detonating the stations in a certain order could create some kind of gravitational disturbance that rips the Earth-&gt;Ibidan wormhole open.<ul><li>Twin wormholes open - one between Earth and the surface of the sun and one between Earth and Ibidan</li><li>Wormhole is &#39;shifting&#39; and in the process of stabilizing it&#39;s simply superheated plasma/exotic particles entering the Earth&#39;s atmosphere that causes the explosion</li></ul></li><li>The stations could funnel laser/maser/kinetic energy into the Earth in a way that rips the wormhole open<ul><li>The station is at the L3 point to Earth and the &quot;poof&quot; of the wormhole being established between these locations caused a massive solar flare to hit the Earth&#39;s atmosphere</li></ul></li></ul>
 
 <p>Due to the player&#39;s having their brains harvested at the end of Epoch Exordium - there could be moments in Langenium MMO where this past character contacts the same players Langenium character via cryptic clues and messages. This could be in their own past and resonance with recent events or direct things like receiving a random reward from that character as an inheritance. Maybe completing different optional objectives in Epoch Exordium could create greater rewards and longer term missions that appear - maybe even discovering more about what WERP did overall, as part of your own story in both games?</p>
-        <h3>Storyline</h3><h2>Prologue for Epoch Exordium</h2>
+          <h3>Storyline</h3><h2>Prologue for Epoch Exordium</h2>
 
 <p>In 2076, the human race seems to be at a breaking point. There has been no oil for 50 years. Coal is rare. Nuclear fission ended up hitting the mainstream as a result, however an Earthquake in.Europe caused a disaster at several plants. Their only.option was to &#39;decontaminate&#39; the area with special hydrogen bombs that sucked the radiation into space, however this pushes those regions.into a permanent unlivable winter. This causes extremes to occur in the Earth climate; whatever isn&#39;t frozen turns.into a harsh desert. The decision to freeze the irradiated sites was proposed by Dr Olivia Bishop and carried out by scientists from CERN, despite several military organizations objecting to their role being usurped by the intellectual elite.</p>
 
@@ -90,6 +92,7 @@
 <p>By 2099, the organization was largely discredited due to being blamed for the transformed weather system, embezzlement and corruption. Many corporations and governments opt to cease funding and by the time Phoenix Day hits, the organization is severely crippled by continued attacks from politicians and business leaders who accuse it of being a waste of money and having leaders who are fueled by paranoid delusions of &#39;doomsday prophets&#39; of things like meteor strikes, solar flares and catastrophic climate change. Dr Olivia Bishop and her team, in particular, are the subject of a lot of outrage as their decision that saved Europe is seen as an avoidable and catastrophic mistake. Several conspiracy theorists believe it was a move to convince the public to create PH in the first place, so that &quot;the scientist fat cats can steal our hard earned money and live it up and conduct ridiculous and expensive experiments to feed their own narcissism and do nothing to enrich the human race&quot;</p>
 
 <p>The power structure of Project Humanity is based around a mixed appointed and elected board of scientists known as the Council. Councillors are either select politicians or &#39;department heads&#39; of scientific units which can then be broken down into teams. May is only a team leader.</p>
+        </div>
       </div>
     </div>
   </body>
