--- a/wiki/fall-of-the-elx.html
+++ b/wiki/fall-of-the-elx.html
@@ -5,6 +5,7 @@
     </title>
     <link href="/vendor/Semantic-UI/dist/semantic.min.css" rel="stylesheet">
     <link href="/dist/styles.css" rel="stylesheet">
+    <link href="/dist/content.css" rel="stylesheet">
   </head>
   <body>
     <div id="fb-root"></div>
@@ -20,8 +21,9 @@
         </nav>
         <div class="fb-like" data-href="https://www.facebook.com/Langenium/" data-layout="button_count" data-action="like" data-size="small" data-show-faces="true" data-share="false"></div>
       </header>
-      <div class="row">
-        <h2>Fall of the Elx</h2><p>A tribute to Lemmings and Worms, the Elx play the part of the Lemmings who wander about and get killed. The Krahm are the Worms, hunting the Elx and trying to eliminate them before they can evacuate.</p>
+      <div id="content">
+        <div class="row">
+          <h2>Fall of the Elx</h2><p>A tribute to Lemmings and Worms, the Elx play the part of the Lemmings who wander about and get killed. The Krahm are the Worms, hunting the Elx and trying to eliminate them before they can evacuate.</p>
 
 <p>The Elx can&#39;t attack, but they can set off environmental traps and position themselves in ways that will force the Krahm into risky and potentially losing choices. The Elx also have the option of completing certain puzzles and collecting items on the map. </p>
 
@@ -34,6 +36,7 @@
 <h3>Purpose</h3>
 
 <p>If executed well, this is fucking gold. It will also give me the ability to write up mechanics, item trees, skills, user db, etc, etc.</p>
+        </div>
       </div>
     </div>
   </body>
