--- a/wiki/ganetti.html
+++ b/wiki/ganetti.html
@@ -5,6 +5,7 @@
     </title>
     <link href="/vendor/Semantic-UI/dist/semantic.min.css" rel="stylesheet">
     <link href="/dist/styles.css" rel="stylesheet">
+    <link href="/dist/content.css" rel="stylesheet">
   </head>
   <body>
     <div id="fb-root"></div>
@@ -20,13 +21,15 @@
         </nav>
         <div class="fb-like" data-href="https://www.facebook.com/Langenium/" data-layout="button_count" data-action="like" data-size="small" data-show-faces="true" data-share="false"></div>
       </header>
-      <div class="row"><h3>Pachyderm Holy Realm of Peace</h3>
+      <div id="content">
+        <div class="row"><h3>Pachyderm Holy Realm of Peace</h3>
 
 <p>The Ganetti are the most spiritual race in the universe, regularly listening to the song of the Cellocher for prophecies and answers.</p>
 
 <p>The Ganetti have a diplomacy with the Krahm built on their sheer incapacity to fight back and usefulness as translators and administrators. </p>
 
 <p>Ganetti scientists, doctors, teachers and evenyouth are scattered across the universe in search of information that could help their people survive the war and hopefully end the war peacefully.</p>
+        </div>
       </div>
     </div>
   </body>
