--- a/wiki/host.html
+++ b/wiki/host.html
@@ -5,6 +5,7 @@
     </title>
     <link href="/vendor/Semantic-UI/dist/semantic.min.css" rel="stylesheet">
     <link href="/dist/styles.css" rel="stylesheet">
+    <link href="/dist/content.css" rel="stylesheet">
   </head>
   <body>
     <div id="fb-root"></div>
@@ -20,13 +21,15 @@
         </nav>
         <div class="fb-like" data-href="https://www.facebook.com/Langenium/" data-layout="button_count" data-action="like" data-size="small" data-show-faces="true" data-share="false"></div>
       </header>
-      <div class="row"><h3>Transcendent Soul</h3>
+      <div id="content">
+        <div class="row"><h3>Transcendent Soul</h3>
 
 <p>The Host has many times including God and Source, however there is no proof of an exact origin for this being. It is theorized by New Age thinkers that The Host exists in the future. </p>
 
 <p>This could potentially be why more relatable evidence for its existence has not yet manifested.</p>
 
 <p>Proof aside, many beings have committed their lives and immeasurable effort to reach out to theirown understanding of The Host. This can lead to great good but also great wickedness.</p>
+        </div>
       </div>
     </div>
   </body>
