--- a/wiki/krahm.html
+++ b/wiki/krahm.html
@@ -5,6 +5,7 @@
     </title>
     <link href="/vendor/Semantic-UI/dist/semantic.min.css" rel="stylesheet">
     <link href="/dist/styles.css" rel="stylesheet">
+    <link href="/dist/content.css" rel="stylesheet">
   </head>
   <body>
     <div id="fb-root"></div>
@@ -20,11 +21,13 @@
         </nav>
         <div class="fb-like" data-href="https://www.facebook.com/Langenium/" data-layout="button_count" data-action="like" data-size="small" data-show-faces="true" data-share="false"></div>
       </header>
-      <div class="row"><p>The Krahm began as a peaceful kingdom until they wereseduced by the offers of power from the Maya. This passion for war led their race to become a never ending war machine.</p>
+      <div id="content">
+        <div class="row"><p>The Krahm began as a peaceful kingdom until they wereseduced by the offers of power from the Maya. This passion for war led their race to become a never ending war machine.</p>
 
 <p>The Krahm Empire received much of their technologyand knowledge from the Elx, whom they repaid with genocide (to prevent them from teaching others).</p>
 
 <p>The Krahm have forces throughout the universe howeverthe sheer vastness of space means that they are yet to build up sufficient numbers and technology to control all of space.</p>
+        </div>
       </div>
     </div>
   </body>
