--- a/wiki/langenium.html
+++ b/wiki/langenium.html
@@ -5,6 +5,7 @@
     </title>
     <link href="/vendor/Semantic-UI/dist/semantic.min.css" rel="stylesheet">
     <link href="/dist/styles.css" rel="stylesheet">
+    <link href="/dist/content.css" rel="stylesheet">
   </head>
   <body>
     <div id="fb-root"></div>
@@ -20,8 +21,9 @@
         </nav>
         <div class="fb-like" data-href="https://www.facebook.com/Langenium/" data-layout="button_count" data-action="like" data-size="small" data-show-faces="true" data-share="false"></div>
       </header>
-      <div class="row">
-        <h2>Langenium (mineral)</h2><p>Langenium is a crystalline mineral created by algae living on the planet Ibidan. </p>
+      <div id="content">
+        <div class="row">
+          <h2>Langenium (mineral)</h2><p>Langenium is a crystalline mineral created by algae living on the planet Ibidan. </p>
 
 <h4>Background</h4>
 
@@ -56,6 +58,7 @@
 - A denser and more efficient crystal structure leads to more densely packed bacterial cells. 
 - The bacteria can be born with variations in their RNA, increasing their sensitivity to certain frequencies of light, increasing their storage capacity and/or increasing their electrical output. 
 - Higher quality and purer conductors made of platinum and gold result in better crystals than variations of the former with copper and boron.</p>
+        </div>
       </div>
     </div>
   </body>
