--- a/wiki/lupus.html
+++ b/wiki/lupus.html
@@ -5,6 +5,7 @@
     </title>
     <link href="/vendor/Semantic-UI/dist/semantic.min.css" rel="stylesheet">
     <link href="/dist/styles.css" rel="stylesheet">
+    <link href="/dist/content.css" rel="stylesheet">
   </head>
   <body>
     <div id="fb-root"></div>
@@ -20,11 +21,13 @@
         </nav>
         <div class="fb-like" data-href="https://www.facebook.com/Langenium/" data-layout="button_count" data-action="like" data-size="small" data-show-faces="true" data-share="false"></div>
       </header>
-      <div class="row"><p>Born simoultaneously on many worlds, the Lupusinstinctively sought one another out and formeda Republic across several galaxies.</p>
+      <div id="content">
+        <div class="row"><p>Born simoultaneously on many worlds, the Lupusinstinctively sought one another out and formeda Republic across several galaxies.</p>
 
 <p>The Krahm war forced them to scale back andconcentrate on defending their key worlds.</p>
 
 <p>The Lupus have a strong distrust of others dueto manipulation of their race by the Maya andthe way the Elx transformed the Krahm from a race of peace to a race of war.</p>
+        </div>
       </div>
     </div>
   </body>
