--- a/wiki/mantis.html
+++ b/wiki/mantis.html
@@ -5,6 +5,7 @@
     </title>
     <link href="/vendor/Semantic-UI/dist/semantic.min.css" rel="stylesheet">
     <link href="/dist/styles.css" rel="stylesheet">
+    <link href="/dist/content.css" rel="stylesheet">
   </head>
   <body>
     <div id="fb-root"></div>
@@ -20,11 +21,13 @@
         </nav>
         <div class="fb-like" data-href="https://www.facebook.com/Langenium/" data-layout="button_count" data-action="like" data-size="small" data-show-faces="true" data-share="false"></div>
       </header>
-      <div class="row"><h3>Mantid Warriors of Life and Truth</h3>
+      <div id="content">
+        <div class="row"><h3>Mantid Warriors of Life and Truth</h3>
 
 <p>Born on the Elx homeworld, the Mantids were ayoung race who marvelled at the wonders of the Elx living among them. </p>
 
 <p>When the Krahm came to kill the Elx, many Mantidswere killed. This trauma of losing their older friend race andbeing attacked caused the Mantids to learn aboutthe war and develop their own forces to fight back.</p>
+        </div>
       </div>
     </div>
   </body>
