--- a/wiki/maya.html
+++ b/wiki/maya.html
@@ -5,6 +5,7 @@
     </title>
     <link href="/vendor/Semantic-UI/dist/semantic.min.css" rel="stylesheet">
     <link href="/dist/styles.css" rel="stylesheet">
+    <link href="/dist/content.css" rel="stylesheet">
   </head>
   <body>
     <div id="fb-root"></div>
@@ -20,13 +21,15 @@
         </nav>
         <div class="fb-like" data-href="https://www.facebook.com/Langenium/" data-layout="button_count" data-action="like" data-size="small" data-show-faces="true" data-share="false"></div>
       </header>
-      <div class="row"><h3>Electronic Eagles</h3>
+      <div id="content">
+        <div class="row"><h3>Electronic Eagles</h3>
 
 <p>Craving love and gratitude, the Maya have a complicated relationship with the rest of existence. Many view their race as a scourge, others have built churches to worship them.</p>
 
 <p>Able to traverse all of reality at will, Maya areable to retrieve any conceivable object or outcome to a situation. The cost is often paidby worship or an arrangement for subservience.</p>
 
 <p>The Maya are often blamed for the rise of the Krahm,a vicious race whose rage consumes the universe.</p>
+        </div>
       </div>
     </div>
   </body>
