--- a/wiki/mmo.html
+++ b/wiki/mmo.html
@@ -5,6 +5,7 @@
     </title>
     <link href="/vendor/Semantic-UI/dist/semantic.min.css" rel="stylesheet">
     <link href="/dist/styles.css" rel="stylesheet">
+    <link href="/dist/content.css" rel="stylesheet">
   </head>
   <body>
     <div id="fb-root"></div>
@@ -20,20 +21,22 @@
         </nav>
         <div class="fb-like" data-href="https://www.facebook.com/Langenium/" data-layout="button_count" data-action="like" data-size="small" data-show-faces="true" data-share="false"></div>
       </header>
-      <div class="row">
-        <h2>MMO</h2><ul><li>Ships can&#39;t attack a city. It&#39;s size is to scale. The city defenses will rain on your parade no matter how powerful you are. Any missile or attack will be countered with targetted lightning shots and anti-missile missiles. Everyone has to land in the appropriate spot and can then walk out of the airdock like a normal person.
+      <div id="content">
+        <div class="row">
+          <h2>MMO</h2><ul><li>Ships can&#39;t attack a city. It&#39;s size is to scale. The city defenses will rain on your parade no matter how powerful you are. Any missile or attack will be countered with targetted lightning shots and anti-missile missiles. Everyone has to land in the appropriate spot and can then walk out of the airdock like a normal person.
 Ship mode:</li><li>PvP battles</li><li>Explore the skies and fight flying monsters above the clouds and oceans YARR</li><li>Cyberpunk airships blowing each other out of the sky.</li><li>Cloud formations that lead to various places like floating fortresses and shit.</li><li>Use avatar to explore marketplace areas in mountaintops, sky cities, etc.</li><li>Final Fantasy style battle system on the ground, uses same skills as ship abilities for local combat</li><li>Workshop where your avatar can walk around your airship and talk to the crew</li><li>Hire NPC crew to assist in ship to ship combat and operations. NPC&#39;s can become permanent employees of a player and be hired by other players for cash. Players can bid for an NPC&#39;s loyalty by increasing their salary, depending on the skills of the NPC this may be worth it.</li><li>Some quests will require the use of crew to complete a quest in different ways:
 ---- Option 1: Player can go into dungeon while airship circles or is docked. The airship then provides support by attacking parts of a facility and opening up corridors, taking out key defences of a facility, providing chaos to distract guards, etc.
 ---- Option 2: Player can remain in ship while NPC&#39;s go in to perform mission objectives. PvE monsters will always focus their aggression on the player character as this is the ship&#39;s captain. 
 ---- Option 3: Everyone is docked. Players send NPC&#39;s out into dungeon to cripple defences, etc.
 ---- Option 4: Entire facility is blown out of the sky. This takes a really long time. There is potential for rewards by salvaging from the wreckage that falls into the ocean or just crumbles around but depending on which territory you&#39;re in, forces for the local faction will come after you for destroying a location. </li></ul>
-        <h3>Storyline</h3><p>The Langenium MMO is set in 2299 with the planet Ibidan as the main setting and starting location. </p>
+          <h3>Storyline</h3><p>The Langenium MMO is set in 2299 with the planet Ibidan as the main setting and starting location. </p>
 
 <h3>Arcs</h3>
 
 <p>The main arc planned is for players to engage in standard PvE and PvP fare while a larger narrative unfolds that changes the world around them. Initially Krahm scout ships will appear here and there, leading up to full blown infiltration units and flanking squadrons.</p>
 
 <p>Eventually the reason for Earth&#39;s destruction will be tied back to the events in Epoch Exordium. As an MMO is an open ended game, an ending to the entire narrative has been written that accommodates for the need for more storylines to unfold later but also satisfyingly ties up everything planned in every other games (with the exception perhaps of <a href="/wiki/fall-of-the-elx.html">Fall of the Elx</a>). </p>
+        </div>
       </div>
     </div>
   </body>
