--- a/wiki/mon-kis.html
+++ b/wiki/mon-kis.html
@@ -5,6 +5,7 @@
     </title>
     <link href="/vendor/Semantic-UI/dist/semantic.min.css" rel="stylesheet">
     <link href="/dist/styles.css" rel="stylesheet">
+    <link href="/dist/content.css" rel="stylesheet">
   </head>
   <body>
     <div id="fb-root"></div>
@@ -20,11 +21,13 @@
         </nav>
         <div class="fb-like" data-href="https://www.facebook.com/Langenium/" data-layout="button_count" data-action="like" data-size="small" data-show-faces="true" data-share="false"></div>
       </header>
-      <div class="row"><p>Most species merely treated the Maya as awish granter, exchanging a portion of theirsoul and will as payment. </p>
+      <div id="content">
+        <div class="row"><p>Most species merely treated the Maya as awish granter, exchanging a portion of theirsoul and will as payment. </p>
 
 <p>The Mon-Kis chose to become apathetic tothis deal as they reasoned becoming less oftheir whole would diminish their enjoymentof their wish. They are legendary for their their first and final wish - for technology to grant their own wishes.</p>
 
 <p>This was at the sacrifice of Mon-Kis, the visor wearing patron of their race.</p>
+        </div>
       </div>
     </div>
   </body>
