--- a/wiki/phoenix-day.html
+++ b/wiki/phoenix-day.html
@@ -5,6 +5,7 @@
     </title>
     <link href="/vendor/Semantic-UI/dist/semantic.min.css" rel="stylesheet">
     <link href="/dist/styles.css" rel="stylesheet">
+    <link href="/dist/content.css" rel="stylesheet">
   </head>
   <body>
     <div id="fb-root"></div>
@@ -20,7 +21,9 @@
         </nav>
         <div class="fb-like" data-href="https://www.facebook.com/Langenium/" data-layout="button_count" data-action="like" data-size="small" data-show-faces="true" data-share="false"></div>
       </header>
-      <div class="row"><p>The destruction of Earth by solar flare, triggered by the space station Helios in <a href="/wiki/epoch-exordium.html">Epoch Exordium</a> and beginning the events of <a href="/wiki/airship-academy.html">Airship Academy</a>.</p></div>
+      <div id="content">
+        <div class="row"><p>The destruction of Earth by solar flare, triggered by the space station Helios in <a href="/wiki/epoch-exordium.html">Epoch Exordium</a> and beginning the events of <a href="/wiki/airship-academy.html">Airship Academy</a>.</p></div>
+      </div>
     </div>
   </body>
   <script src="/vendor/jquery.min.js"></script>
