--- a/wiki/robot.html
+++ b/wiki/robot.html
@@ -5,6 +5,7 @@
     </title>
     <link href="/vendor/Semantic-UI/dist/semantic.min.css" rel="stylesheet">
     <link href="/dist/styles.css" rel="stylesheet">
+    <link href="/dist/content.css" rel="stylesheet">
   </head>
   <body>
     <div id="fb-root"></div>
@@ -20,7 +21,8 @@
         </nav>
         <div class="fb-like" data-href="https://www.facebook.com/Langenium/" data-layout="button_count" data-action="like" data-size="small" data-show-faces="true" data-share="false"></div>
       </header>
-      <div class="row"><h3>Artificial Intelligence Collective</h3>
+      <div id="content">
+        <div class="row"><h3>Artificial Intelligence Collective</h3>
 
 <p>Far in the future the stars are all extinguished and no organic life has existed in eons.</p>
 
@@ -29,6 +31,7 @@
 <p>Robot opts to reboot the univese in order to find out how life was able to create and sustain stars. </p>
 
 <p>When the universe reboots, Robot meets Sinnis in the void and says he will sit with him. He cannot free Sinnis as he needs him there to hold up the universe, but he will be his friend.</p>
+        </div>
       </div>
     </div>
   </body>
