--- a/wiki/sinnis.html
+++ b/wiki/sinnis.html
@@ -5,6 +5,7 @@
     </title>
     <link href="/vendor/Semantic-UI/dist/semantic.min.css" rel="stylesheet">
     <link href="/dist/styles.css" rel="stylesheet">
+    <link href="/dist/content.css" rel="stylesheet">
   </head>
   <body>
     <div id="fb-root"></div>
@@ -20,12 +21,14 @@
         </nav>
         <div class="fb-like" data-href="https://www.facebook.com/Langenium/" data-layout="button_count" data-action="like" data-size="small" data-show-faces="true" data-share="false"></div>
       </header>
-      <div class="row"><h3>Cursed Soul</h3>
+      <div id="content">
+        <div class="row"><h3>Cursed Soul</h3>
 
 <p>An essence imprisoned in an older version of reality, Sinnis is desperate to find a way to
 instantiate himself in the universe.</p>
 
 <p>He is the void itself, the voice that whispers to all beings in the silence.</p>
+        </div>
       </div>
     </div>
   </body>
