--- a/wiki/technology_of_2099.html
+++ b/wiki/technology_of_2099.html
@@ -5,6 +5,7 @@
     </title>
     <link href="/vendor/Semantic-UI/dist/semantic.min.css" rel="stylesheet">
     <link href="/dist/styles.css" rel="stylesheet">
+    <link href="/dist/content.css" rel="stylesheet">
   </head>
   <body>
     <div id="fb-root"></div>
@@ -20,8 +21,9 @@
         </nav>
         <div class="fb-like" data-href="https://www.facebook.com/Langenium/" data-layout="button_count" data-action="like" data-size="small" data-show-faces="true" data-share="false"></div>
       </header>
-      <div class="row">
-        <h2>Technology of 2099</h2><h2>Technology of 2099</h2>
+      <div id="content">
+        <div class="row">
+          <h2>Technology of 2099</h2><h2>Technology of 2099</h2>
 
 <h4>Computers</h4>
 
@@ -82,6 +84,7 @@
 <p>Technology and lifestyle of 2099</p>
 
 <p>Technology and lifestyle of 2299</p>
+        </div>
       </div>
     </div>
   </body>
