--- a/wiki/tigris.html
+++ b/wiki/tigris.html
@@ -5,6 +5,7 @@
     </title>
     <link href="/vendor/Semantic-UI/dist/semantic.min.css" rel="stylesheet">
     <link href="/dist/styles.css" rel="stylesheet">
+    <link href="/dist/content.css" rel="stylesheet">
   </head>
   <body>
     <div id="fb-root"></div>
@@ -20,11 +21,13 @@
         </nav>
         <div class="fb-like" data-href="https://www.facebook.com/Langenium/" data-layout="button_count" data-action="like" data-size="small" data-show-faces="true" data-share="false"></div>
       </header>
-      <div class="row"><p>Many varieties of Tigris appeared and advancedat relatively the same time. Their keen wisdomand ability to communicate with the Drak gavethem an unprecedented level of practical wisdom.</p>
+      <div id="content">
+        <div class="row"><p>Many varieties of Tigris appeared and advancedat relatively the same time. Their keen wisdomand ability to communicate with the Drak gavethem an unprecedented level of practical wisdom.</p>
 
 <p>They have absolute mastery of the mechanics ofreality and choose to hide their vast riches andhomes within mundane seeming objects in orderto protect it.</p>
 
 <p>It is argued that the Tigris and Lupus could end thewar together however their seemingly complimentarystrengths are also the reason they cannot get along.</p>
+        </div>
       </div>
     </div>
   </body>
