--- a/wiki/torton.html
+++ b/wiki/torton.html
@@ -5,6 +5,7 @@
     </title>
     <link href="/vendor/Semantic-UI/dist/semantic.min.css" rel="stylesheet">
     <link href="/dist/styles.css" rel="stylesheet">
+    <link href="/dist/content.css" rel="stylesheet">
   </head>
   <body>
     <div id="fb-root"></div>
@@ -20,13 +21,15 @@
         </nav>
         <div class="fb-like" data-href="https://www.facebook.com/Langenium/" data-layout="button_count" data-action="like" data-size="small" data-show-faces="true" data-share="false"></div>
       </header>
-      <div class="row"><h3>Academy of Immortal Tortoises</h3>
+      <div id="content">
+        <div class="row"><h3>Academy of Immortal Tortoises</h3>
 
 <p>Born on a dark ocean world with no sun, the Tortonderive most of their heat from geothermal vents. </p>
 
 <p>Despite having little technology or structures, the Tortons appear to have mastered their own mindand soul to a level no other being in existence has or ever will match.</p>
 
 <p>With a safe environment and steady food supply the Torton can live forever. Many are known to beliving for several million years.</p>
+        </div>
       </div>
     </div>
   </body>
