--- a/wiki/tree-of-life.html
+++ b/wiki/tree-of-life.html
@@ -5,6 +5,7 @@
     </title>
     <link href="/vendor/Semantic-UI/dist/semantic.min.css" rel="stylesheet">
     <link href="/dist/styles.css" rel="stylesheet">
+    <link href="/dist/content.css" rel="stylesheet">
   </head>
   <body>
     <div id="fb-root"></div>
@@ -20,8 +21,9 @@
         </nav>
         <div class="fb-like" data-href="https://www.facebook.com/Langenium/" data-layout="button_count" data-action="like" data-size="small" data-show-faces="true" data-share="false"></div>
       </header>
-      <div class="row">
-        <h2>Tree of Life</h2><p>The story of 4 brothers and their efforts to restore life to the world.</p>
+      <div id="content">
+        <div class="row">
+          <h2>Tree of Life</h2><p>The story of 4 brothers and their efforts to restore life to the world.</p>
 
 <h3>Oceanus</h3>
 
@@ -40,6 +42,7 @@ Deyum’s instructions from Eden to grow the tree. Hyperion is made of photonic 
 <h3>Sinnis</h3>
 
 <p>An avatar born from Eve’s mistake, Sinnis is cursed to corruptand kill everything he touches. He is imprisoned by his brothers so that they can carry out Deyum’splan to create the next realm, heaven.</p>
+        </div>
       </div>
     </div>
   </body>
