--- a/wiki/werp.html
+++ b/wiki/werp.html
@@ -5,6 +5,7 @@
     </title>
     <link href="/vendor/Semantic-UI/dist/semantic.min.css" rel="stylesheet">
     <link href="/dist/styles.css" rel="stylesheet">
+    <link href="/dist/content.css" rel="stylesheet">
   </head>
   <body>
     <div id="fb-root"></div>
@@ -20,13 +21,15 @@
         </nav>
         <div class="fb-like" data-href="https://www.facebook.com/Langenium/" data-layout="button_count" data-action="like" data-size="small" data-show-faces="true" data-share="false"></div>
       </header>
-      <div class="row"><h3>Experimental Bio-Eletrical Intelligence</h3>
+      <div id="content">
+        <div class="row"><h3>Experimental Bio-Eletrical Intelligence</h3>
 
 <p>In the middle of the 21st century, the progress ofscience on Earth staggered dramatically due towar and poverty. </p>
 
 <p>The Web Energy Research Project was an artificialbrain created to continue the progress of science and save the human race from destruction.</p>
 
 <p>In an ironic twist, WERP learns to harness EM and gravitational waves to cast his will out toother machine entities, completely possessing any other form of technology to do his bidding.</p>
+        </div>
       </div>
     </div>
   </body>
