--- a/gallery/posters.html
+++ b/gallery/posters.html
@@ -5,6 +5,7 @@
     </title>
     <link href="/vendor/Semantic-UI/dist/semantic.min.css" rel="stylesheet">
     <link href="/dist/styles.css" rel="stylesheet">
+    <link href="/dist/content.css" rel="stylesheet">
   </head>
   <body>
     <div id="fb-root"></div>
@@ -20,18 +21,20 @@
         </nav>
         <div class="fb-like" data-href="https://www.facebook.com/Langenium/" data-layout="button_count" data-action="like" data-size="small" data-show-faces="true" data-share="false"></div>
       </header>
-      <div class="row">
-        <h2>Posters</h2>
-        <ul class="gallery">
-          <li><a href="/universe/art/production/posters/Atlantis - Yedin's Temple-01.png"><img src="/universe/art/production/posters/thumb_Atlantis - Yedin's Temple-01.png"></a></li>
-          <li><a href="/universe/art/production/posters/Exordium Redesign-01.png"><img src="/universe/art/production/posters/thumb_Exordium Redesign-01.png"></a></li>
-          <li><a href="/universe/art/production/posters/Feature Poster-01.png"><img src="/universe/art/production/posters/thumb_Feature Poster-01.png"></a></li>
-          <li><a href="/universe/art/production/posters/Langenium - Cosmic Archetypes-01.png"><img src="/universe/art/production/posters/thumb_Langenium - Cosmic Archetypes-01.png"></a></li>
-          <li><a href="/universe/art/production/posters/Langenium Airship Academy-01.png"><img src="/universe/art/production/posters/thumb_Langenium Airship Academy-01.png"></a></li>
-          <li><a href="/universe/art/production/posters/Langenium Fall of the Elx-01.png"><img src="/universe/art/production/posters/thumb_Langenium Fall of the Elx-01.png"></a></li>
-          <li><a href="/universe/art/production/posters/Langenium Master Timeline-01.png"><img src="/universe/art/production/posters/thumb_Langenium Master Timeline-01.png"></a></li>
-          <li><a href="/universe/art/production/posters/MMO Poster-01.png"><img src="/universe/art/production/posters/thumb_MMO Poster-01.png"></a></li>
-        </ul>
+      <div id="content">
+        <div class="row">
+          <h2>Posters</h2>
+          <ul class="gallery">
+            <li><a href="/universe/art/production/posters/Atlantis - Yedin's Temple-01.png"><img src="/universe/art/production/posters/thumb_Atlantis - Yedin's Temple-01.png"></a></li>
+            <li><a href="/universe/art/production/posters/Exordium Redesign-01.png"><img src="/universe/art/production/posters/thumb_Exordium Redesign-01.png"></a></li>
+            <li><a href="/universe/art/production/posters/Feature Poster-01.png"><img src="/universe/art/production/posters/thumb_Feature Poster-01.png"></a></li>
+            <li><a href="/universe/art/production/posters/Langenium - Cosmic Archetypes-01.png"><img src="/universe/art/production/posters/thumb_Langenium - Cosmic Archetypes-01.png"></a></li>
+            <li><a href="/universe/art/production/posters/Langenium Airship Academy-01.png"><img src="/universe/art/production/posters/thumb_Langenium Airship Academy-01.png"></a></li>
+            <li><a href="/universe/art/production/posters/Langenium Fall of the Elx-01.png"><img src="/universe/art/production/posters/thumb_Langenium Fall of the Elx-01.png"></a></li>
+            <li><a href="/universe/art/production/posters/Langenium Master Timeline-01.png"><img src="/universe/art/production/posters/thumb_Langenium Master Timeline-01.png"></a></li>
+            <li><a href="/universe/art/production/posters/MMO Poster-01.png"><img src="/universe/art/production/posters/thumb_MMO Poster-01.png"></a></li>
+          </ul>
+        </div>
       </div>
     </div>
   </body>
