--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     </title>
     <link href="/vendor/Semantic-UI/dist/semantic.min.css" rel="stylesheet">
     <link href="/dist/styles.css" rel="stylesheet">
+    <link href="/dist/content.css" rel="stylesheet">
   </head>
   <body>
     <div id="fb-root"></div>
@@ -20,22 +21,23 @@
         </nav>
         <div class="fb-like" data-href="https://www.facebook.com/Langenium/" data-layout="button_count" data-action="like" data-size="small" data-show-faces="true" data-share="false"></div>
       </header>
-      <div class="row">
-        <div class="hero"> 
-          <h1>Interactive Hero Area</h1>
+      <div id="content">
+        <div class="row">
+          <div class="hero"> 
+            <h1>Interactive Hero Area</h1>
+          </div>
+          <div class="call_to_action">
+            <ul class="ui cards">
+              <li class="ui card fluid"><a class="ui black labeled icon button large" href="/games"><i class="icon game"></i>Play</a></li>
+              <li class="ui card fluid"><a class="ui black labeled icon button large" href="/gallery/concept-art.html"> <i class="icon paint brush"></i>Concept Art</a></li>
+              <li class="ui card fluid"><a class="ui black labeled icon button large" href="/wiki/storylines.html"> <i class="icon write"></i>Storylines</a></li>
+              <li class="ui card fluid"><a class="ui black labeled icon button large" href="http://github.com/paulbrzeski/Langenium"> <i class="icon github"></i>Github</a></li>
+            </ul>
+          </div>
         </div>
-        <div class="call_to_action">
-          <ul class="row">
-            <li><a href="/games">Play</a></li>
-            <li><a href="/gallery/concept-art.html">Concept Art</a></li>
-            <li><a href="/wiki/storylines.html">Storylines</a></li>
-            <li><a href="http://github.com/paulbrzeski/Langenium">Github</a></li>
-          </ul>
-        </div>
-      </div>
-      <div class="row">
-        <div class="news">
-          <h2>News</h2><h3>Working with audio, making songs and fighting round the world!</h3>
+        <div class="row">
+          <div class="news">
+            <h2>News</h2><h3>Working with audio, making songs and fighting round the world!</h3>
 
 <p><em>25th of December 2016</em></p>
 
@@ -56,8 +58,9 @@
 <p><em>11th of December 2016</em></p>
 
 <p>This is a full rebuild of the site. Please visit the <a href="http://facebook.com/Langenium">Langenium Facebook Page</a> for more information.</p>
+          </div>
+          <div class="most_popular"></div>
         </div>
-        <div class="most_popular"></div>
       </div>
     </div>
   </body>
