--- a/wiki/cellocher.html
+++ b/wiki/cellocher.html
@@ -5,6 +5,7 @@
     </title>
     <link href="/vendor/Semantic-UI/dist/semantic.min.css" rel="stylesheet">
     <link href="/dist/styles.css" rel="stylesheet">
+    <link href="/dist/content.css" rel="stylesheet">
   </head>
   <body>
     <div id="fb-root"></div>
@@ -20,7 +21,8 @@
         </nav>
         <div class="fb-like" data-href="https://www.facebook.com/Langenium/" data-layout="button_count" data-action="like" data-size="small" data-show-faces="true" data-share="false"></div>
       </header>
-      <div class="row"><p>The mating process of the Cellocher gives birth to yellow stars. These stars tend to give rise to life bearing systems and are incubation chambers for new Cellocher.</p>
+      <div id="content">
+        <div class="row"><p>The mating process of the Cellocher gives birth to yellow stars. These stars tend to give rise to life bearing systems and are incubation chambers for new Cellocher.</p>
 
 <p>Their consciousness exists in a dimension beyond conventional space/time and sits on travelling groups of photons. They can substantiate themselves into a holographic form at will.</p>
 
@@ -29,6 +31,7 @@
 <p>As life develops around a Cellocher star,
 the songs of the life around it feed into the
 persona of the Cellocher spawn.</p>
+        </div>
       </div>
     </div>
   </body>
