--- a/wiki/hircus-human.html
+++ b/wiki/hircus-human.html
@@ -5,6 +5,7 @@
     </title>
     <link href="/vendor/Semantic-UI/dist/semantic.min.css" rel="stylesheet">
     <link href="/dist/styles.css" rel="stylesheet">
+    <link href="/dist/content.css" rel="stylesheet">
   </head>
   <body>
     <div id="fb-root"></div>
@@ -20,10 +21,12 @@
         </nav>
         <div class="fb-like" data-href="https://www.facebook.com/Langenium/" data-layout="button_count" data-action="like" data-size="small" data-show-faces="true" data-share="false"></div>
       </header>
-      <div class="row"><p>The Hircus homeworld of Gaia was frequently visited by many races. Most notably the Tigris who instructed early Hircus to build the pyramids as a beacon for 
+      <div id="content">
+        <div class="row"><p>The Hircus homeworld of Gaia was frequently visited by many races. Most notably the Tigris who instructed early Hircus to build the pyramids as a beacon for 
 their wormhole technology.</p>
 
 <p>It is said that a mysterious entity known only as the Horned Ape appears to the Hircus and guides them. Most Hircus resemble Gaia natives however variations have evolved over eons of migration across time and space.</p>
+        </div>
       </div>
     </div>
   </body>
