--- a/wiki/lux-atlas.html
+++ b/wiki/lux-atlas.html
@@ -5,6 +5,7 @@
     </title>
     <link href="/vendor/Semantic-UI/dist/semantic.min.css" rel="stylesheet">
     <link href="/dist/styles.css" rel="stylesheet">
+    <link href="/dist/content.css" rel="stylesheet">
   </head>
   <body>
     <div id="fb-root"></div>
@@ -20,10 +21,12 @@
         </nav>
         <div class="fb-like" data-href="https://www.facebook.com/Langenium/" data-layout="button_count" data-action="like" data-size="small" data-show-faces="true" data-share="false"></div>
       </header>
-      <div class="row">
-        <h2>Lux Atlas</h2><p>This is the story of our universe and where Earth really came from and what the Elx are really up to.</p>
+      <div id="content">
+        <div class="row">
+          <h2>Lux Atlas</h2><p>This is the story of our universe and where Earth really came from and what the Elx are really up to.</p>
 
 <p>TBA</p>
+        </div>
       </div>
     </div>
   </body>
