--- a/wiki/storylines.html
+++ b/wiki/storylines.html
@@ -5,6 +5,7 @@
     </title>
     <link href="/vendor/Semantic-UI/dist/semantic.min.css" rel="stylesheet">
     <link href="/dist/styles.css" rel="stylesheet">
+    <link href="/dist/content.css" rel="stylesheet">
   </head>
   <body>
     <div id="fb-root"></div>
@@ -20,9 +21,10 @@
         </nav>
         <div class="fb-like" data-href="https://www.facebook.com/Langenium/" data-layout="button_count" data-action="like" data-size="small" data-show-faces="true" data-share="false"></div>
       </header>
-      <div class="row">
-        <h2>Storylines</h2>
-        <h3>Epoch Exordium</h3><h2>Prologue for Epoch Exordium</h2>
+      <div id="content">
+        <div class="row">
+          <h2>Storylines</h2>
+          <h3>Epoch Exordium</h3><h2>Prologue for Epoch Exordium</h2>
 
 <p>In 2076, the human race seems to be at a breaking point. There has been no oil for 50 years. Coal is rare. Nuclear fission ended up hitting the mainstream as a result, however an Earthquake in.Europe caused a disaster at several plants. Their only.option was to &#39;decontaminate&#39; the area with special hydrogen bombs that sucked the radiation into space, however this pushes those regions.into a permanent unlivable winter. This causes extremes to occur in the Earth climate; whatever isn&#39;t frozen turns.into a harsh desert. The decision to freeze the irradiated sites was proposed by Dr Olivia Bishop and carried out by scientists from CERN, despite several military organizations objecting to their role being usurped by the intellectual elite.</p>
 
@@ -35,7 +37,7 @@
 <p>By 2099, the organization was largely discredited due to being blamed for the transformed weather system, embezzlement and corruption. Many corporations and governments opt to cease funding and by the time Phoenix Day hits, the organization is severely crippled by continued attacks from politicians and business leaders who accuse it of being a waste of money and having leaders who are fueled by paranoid delusions of &#39;doomsday prophets&#39; of things like meteor strikes, solar flares and catastrophic climate change. Dr Olivia Bishop and her team, in particular, are the subject of a lot of outrage as their decision that saved Europe is seen as an avoidable and catastrophic mistake. Several conspiracy theorists believe it was a move to convince the public to create PH in the first place, so that &quot;the scientist fat cats can steal our hard earned money and live it up and conduct ridiculous and expensive experiments to feed their own narcissism and do nothing to enrich the human race&quot;</p>
 
 <p>The power structure of Project Humanity is based around a mixed appointed and elected board of scientists known as the Council. Councillors are either select politicians or &#39;department heads&#39; of scientific units which can then be broken down into teams. May is only a team leader.</p>
-        <h3>Airship Academy</h3><p>In 1931 a German engineer, Dr Bruno Lange, developed a photo cell using silver selenide in place of copper oxide. In 2043, a deep space radar telescope discovers a new element in the accretion disc of a black hole - langenium. Through studying it&#39;s activity, scientists believed that it could perfectly convert surrounding light into usable electric energy. With no hope of retrieving even a sample, humanity searched for other avenues.</p>
+          <h3>Airship Academy</h3><p>In 1931 a German engineer, Dr Bruno Lange, developed a photo cell using silver selenide in place of copper oxide. In 2043, a deep space radar telescope discovers a new element in the accretion disc of a black hole - langenium. Through studying it&#39;s activity, scientists believed that it could perfectly convert surrounding light into usable electric energy. With no hope of retrieving even a sample, humanity searched for other avenues.</p>
 
 <p>in 2099, the human race is growing desperate for a new source of energy. An AI called WERP (Web Energy Research Protocol) is created in order to research and develop a new form of power generation and deployed into the world wide web. It is hoped that it will be able to come up with a solution using the sum of human knowledge.</p>
 
@@ -78,6 +80,7 @@
 <p>The world never recovered from the state of cold war. As an immortal AI advising the Union parliament, May sought to bring peace to the world however the revelations about WERP, Tor and Francis only lead to a further state of distrust between Al-Alazaar and Winthrom. The Union now plays the role of peacekeeper, using their vast technological superiority and trade agreements as a bargaining chip to prevent violence from escalating.</p>
 
 <p>Aliens scouts have also begun attacking remote human outposts and it seems likely that they are systematically learning about humans before proceeding with a formulated plan to attack. No one is able to agree on how to handle the aliens.</p>
+        </div>
       </div>
     </div>
   </body>
